<resources>
    <string name="app_name">BasicArchitecture</string>
    <string name="next_button">Next</string>
    <string name="summary">Summary</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="interests">Interests</string>
    <string name="dd_mm_yyyy_hint">dd.mm.yyyy</string>
</resources>