<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textAppearance="@style/summary_text_appearance" />

        <TextView
            android:id="@+id/name_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/summary_placeholder_text_appearance"
            tools:text="name placeholder" />

        <TextView
            android:id="@+id/surname_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surname"
            android:textAppearance="@style/summary_text_appearance" />

        <TextView
            android:id="@+id/surname_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/summary_placeholder_text_appearance"
            tools:text="surname placeholder" />

        <TextView
            android:id="@+id/dob_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_of_birth"
            android:textAppearance="@style/summary_text_appearance" />

        <TextView
            android:id="@+id/dob_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/summary_placeholder_text_appearance"
            tools:text="dob placeholder" />

        <TextView
            android:id="@+id/address_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textAppearance="@style/summary_text_appearance" />

        <TextView
            android:id="@+id/address_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/summary_placeholder_text_appearance"
            tools:text="Address placeholder" />

        <TextView
            android:id="@+id/interests_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/interests"
            android:textAppearance="@style/summary_text_appearance" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/interests_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"></com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</ScrollView>
